fix linter/docs
