# docs/swagger.json
@@ -1180,7 +1180,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.Node"
+                            "$ref": "#/definitions/types.NodeWithNestedCapacity"
                         }
                     },
                     "400": {
@@ -1415,7 +1415,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.Node"
+                            "$ref": "#/definitions/types.NodeWithNestedCapacity"
                         }
                     },
                     "400": {
@@ -2084,6 +2084,72 @@
                     "$ref": "#/definitions/types.CapacityResult"
                 },
                 "certificationType": {
+                    "type": "string"
+                },
+                "created": {
+                    "type": "integer"
+                },
+                "dedicated": {
+                    "type": "boolean"
+                },
+                "farmId": {
+                    "type": "integer"
+                },
+                "farmingPolicyId": {
+                    "type": "integer"
+                },
+                "gridVersion": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/types.Location"
+                },
+                "nodeId": {
+                    "type": "integer"
+                },
+                "publicConfig": {
+                    "$ref": "#/definitions/types.PublicConfig"
+                },
+                "rentContractId": {
+                    "type": "integer"
+                },
+                "rentedByTwinId": {
+                    "type": "integer"
+                },
+                "serialNumber": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "added node status field for up or down",
+                    "type": "string"
+                },
+                "twinId": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "integer"
+                },
+                "uptime": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.NodeWithNestedCapacity": {
+            "type": "object",
+            "properties": {
+                "capacity": {
+                    "$ref": "#/definitions/types.CapacityResult"
+                },
+                "certificationType": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
                     "type": "string"
                 },
                 "created": {
